--- a/style.css
+++ b/style.css
@@ -74,90 +74,109 @@
   background-color: rgba(211, 211, 211, 0.5);
 }
 
-/* 各要素の位置調整は絶対位置指定で問題ありませんでしょうか？ */
 .top__container__title {
   height: 261px;
   width: 639px;
   position: absolute;
-  top: 36px;
-  left: -17px;
+  top: 328px;
+  left: 60px;
 }
 
 .top__container__title h1 {
-  color: #304266;
+color: #304266;
+  text-shadow: 0px 4px 14px rgba(255, 255, 255, 0.60);
   font-family: "Zen Kaku Gothic Antique";
-  font-size: 52px;
+  font-size: 48px;
   font-style: normal;
-  font-weight: 400;
-  line-height: 87px; /* 167.308% */
+  font-weight: 700;
+  line-height: 72px;
+  /* 150% */
+  letter-spacing: -2.4px;
+}
+.top__container__title h1 span {
+  letter-spacing: 2.4px;
 }
 
 .top__container__logo {
-  height: 60.857px;
-  width: 284px;
+  width: 550px;
+    height: 118.004px;
   position: absolute;
-  top: 31px;
-  right: 24px;
+  top: 74px;
+  left: 62px;
   background-color: rgb(11, 102, 135);
 }
 
-.top__container__cta-wrapper {
+/* .top__container__cta-wrapper {
   /* height: 166px;
   width: 378px; */
-  position: absolute;
+  /* position: absolute;
   bottom: 18px;
   left: -23px;
   align-items: center;
   display: flex;
   flex-direction: column;
   gap: 16px;
-}
+} */ 
 
-.top__container__cta-wrapper__text {
+.top__container__text h3{
+  position: absolute;
+  top: 232px;
+  left: 64px;
   color: #304266;
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  text-align: center;
+    font-family: "Zen Kaku Gothic Antique";
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 48px;
+    /* 171.429% */
+    letter-spacing: 3.92px;
 }
 
-.top__container__cta-wrapper__text h3 {
-  font-family: "Zen Kaku Gothic Antique";
-  font-size: 28px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 32px; /* 114.286% */
-  letter-spacing: 1.4px;
-}
 
-.top__container__cta-wrapper__text h3:nth-of-type(2) {
+/* .top__container__text h3:nth-of-type(2) {
   letter-spacing: 12.32px;
+} */
+
+.top__container__cta-button {
+  position: absolute;
+  bottom: 48px;
+  left: 60px;
+  display: inline-flex;
+    padding: 20px 64px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+    border-radius: 8px;
+    background: linear-gradient(270deg, #D91E68 16.42%, #F2635F 126.01%);
 }
 
-.top__container__cta-wrapper__cta-button {
-  display: flex;
-  padding: 16px 32px;
-  align-items: center;
-  gap: 12px;
-  border-radius: 8px;
-  background: linear-gradient(92deg, #5079b2 -5%, #22344c 102.18%);
+.top__container__cta-button__upper h2 {
+  color: #FFF;
+    font-family: "Zen Kaku Gothic Antique";
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 32px;
+    /* 114.286% */
+    letter-spacing: 5.6px;
 }
-
-.top__container__cta-wrapper__cta-button h2 {
-  color: #fff;
-
-  text-align: center;
-  font-family: "Zen Kaku Gothic Antique";
-  font-size: 30px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 38px; /* 126.667% */
+.top__container__cta-button__lower h2 {
+  color: #FFF;
+    text-align: center;
+    font-family: "Zen Kaku Gothic Antique";
+    font-size: 38px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 48px;
+    /* 126.316% */
+    letter-spacing: 7.6px;
 }
 
 .top__container__acter {
   position: absolute;
-  top: 223px;
-  left: 337px;
+  top: 165px;
+  right: 48px;
   width: 563px;
   height: 513px;
 }
@@ -2139,3 +2158,57 @@ color: #D91E68;
       line-height: normal;
       letter-spacing: 1.2px;
   }
+
+
+  /* ---------policy--------- */
+            .policy {
+              font-family: 'Arial', sans-serif;
+              line-height: 1.6;
+              padding: 20px;
+              color: #333;
+              background-color: #fff;
+              max-width: 1000px;
+              margin: 0 auto;
+              border: 1px solid #ccc;
+            }
+      
+            .policy h1 {
+              text-align: center;
+              font-size: 32px;
+              margin-bottom: 70px;
+            }
+      
+            .policy h2 {
+              font-size: 24px;
+              margin-top: 70px;
+              margin-bottom: 60px;
+            }
+      
+            .policy p {
+              font-size: 16px;
+              margin: 60px 0;
+            }
+      
+            .policy__contact {
+              margin-top: 70px;
+            }
+      
+            .policy__footer {
+              text-align: right;
+              margin-top: 80px;
+            }
+      
+            .policy__back-to-top {
+              text-align: center;
+              margin-top: 70px;
+            }
+      
+            .policy__back-to-top a {
+              color: #000;
+              text-decoration: none;
+              font-weight: bold;
+            }
+      
+            .policy__back-to-top a:hover {
+              text-decoration: underline;
+            }
