--- a/normalize.css
+++ b/normalize.css
@@ -6,7 +6,7 @@ body {
   align-items: center;
 }
 html {
-  background-color: rgb(200, 200, 200);
+  background-color: #fff;
 }
 a {
   color: inherit;
