--- a/style.css
+++ b/style.css
@@ -4,50 +4,54 @@
   font-weight: normal;
   font-style: normal;
 }
-
 @font-face {
   font-family: "Volkhov";
   src: url("./assets/font/Volkhov/Volkhov-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
-
 @font-face {
   font-family: "Zen Kaku Gothic Antique";
-  src: url("./assets/font/ZenKakuGothicAntique-Regular.ttf") format("truetype");
-  font-weight: normal;
+  src: url("./assets/font/Zen_Kaku_Gothic_Antique/ZenKakuGothicAntique-Light.ttf") format("truetype");
+  font-weight: 400;
   font-style: normal;
 }
-
 @font-face {
   font-family: "Zen Kaku Gothic Antique";
-  src: url("./assets/font/ZenKakuGothicAntique-Bold.ttf") format("truetype");
-  font-weight: bold;
+  src: url("./assets/font/Zen_Kaku_Gothic_Antique/ZenKakuGothicAntique-Regular.ttf") format("truetype");
+  font-weight: 500;
   font-style: normal;
 }
-
+@font-face {
+  font-family: "Zen Kaku Gothic Antique";
+  src: url("./assets/font/Zen_Kaku_Gothic_Antique/ZenKakuGothicAntique-Medium.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Zen Kaku Gothic Antique";
+  src: url("./assets/font/Zen_Kaku_Gothic_Antique/ZenKakuGothicAntique-Bold.ttf") format("truetype");
+  font-weight: 900;
+  font-style: normal;
+}
 @font-face {
   font-family: "Zen Kurenaido";
   src: url("./assets/font/Zen_Kurenaido/ZenKurenaido-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
-
-
 @font-face {
   font-family: "Zen Antique Soft";
   src: url("./assets/font/ZenAntiqueSoft-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
-
 @font-face {
   font-family: "Zen Antique Soft";
   src: url("./assets/font/ZenAntiqueSoft-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
-
 @font-face {
   font-family: "Noto Sans JP";
   src: url("./assets/font/NotoSansJP-VariableFont_wght.ttf") format("truetype");
@@ -59,24 +63,43 @@
 .top {
   width: 1366px;
   height: 768px;
-  flex-shrink: 0;
-  padding: 0 64px 48px 64px;
+  padding: 34px 43px;
   background-color: #fafafa;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+    background-image: url("./images/sec1/fv_background_pc.jpg");
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: cover;
 }
 
 .top__container {
-  width: 1238px;
-  height: 720px;
+  width: 1280px;
+  height: 700px;
+  flex-shrink: 0;
   position: relative;
-  background-image: url("./images/background.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-color: rgba(211, 211, 211, 0.5);
-}
 
+}
+.top__container__logo {
+  position: absolute;
+  top: 74px;
+  left: 62px;
+}
+.top__container__text h3 {
+  position: absolute;
+  top: 232px;
+  left: 64px;
+  color: #304266;
+  font-family: "Zen Kaku Gothic Antique";
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 48px;
+  /* 171.429% */
+  letter-spacing: 3.92px;
+}
 .top__container__title {
-  height: 261px;
-  width: 639px;
   position: absolute;
   top: 328px;
   left: 60px;
@@ -97,15 +120,6 @@ color: #304266;
   letter-spacing: 2.4px;
 }
 
-.top__container__logo {
-  width: 550px;
-    height: 118.004px;
-  position: absolute;
-  top: 74px;
-  left: 62px;
-  background-color: rgb(11, 102, 135);
-}
-
 /* .top__container__cta-wrapper {
   /* height: 166px;
   width: 378px; */
@@ -118,19 +132,7 @@ color: #304266;
   gap: 16px;
 } */ 
 
-.top__container__text h3{
-  position: absolute;
-  top: 232px;
-  left: 64px;
-  color: #304266;
-    font-family: "Zen Kaku Gothic Antique";
-    font-size: 28px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 48px;
-    /* 171.429% */
-    letter-spacing: 3.92px;
-}
+
 
 
 /* .top__container__text h3:nth-of-type(2) {
@@ -139,7 +141,7 @@ color: #304266;
 
 .top__container__cta-button {
   position: absolute;
-  bottom: 48px;
+  top: 520px;
   left: 60px;
   display: inline-flex;
     padding: 20px 64px;
@@ -173,10 +175,10 @@ color: #304266;
     letter-spacing: 7.6px;
 }
 
-.top__container__acter {
+.top__container__actor {
   position: absolute;
   top: 165px;
-  right: 48px;
+  left: 670px;
   width: 563px;
   height: 513px;
 }
@@ -202,7 +204,7 @@ color: #304266;
 /* -------------company-overview---------- */
 .company-overview {
   width: 1366px;
-  height: 768px;
+  height: 100%;
   flex-shrink: 0;
   display: flex;
   justify-content: center;
@@ -299,7 +301,7 @@ color: #304266;
 .company-overview__container__stats__cards__card__text__lower__num h4 {
     font-family: Volkhov;
 }
-.company-overview__container__stats__cards__card__text__lower__unit {
+.company-overview__container__stats__cards__card__text__lower__unit h4 {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -652,6 +654,7 @@ color: #304266;
   height: 300px;
   background: #304266;
   position: relative;
+  background-image: url(./images/sec6/sec6_background-1_pc.jpg);
 }
 .serviceIntroduction__head-line__text-box {
   position: absolute;
@@ -679,7 +682,8 @@ color: #304266;
 }
 .serviceIntroduction__head-line__text-box__description p {
   color: #fff;
-
+  display: flex;
+  text-align: start;
   font-family: "Zen Kaku Gothic Antique";
   font-size: 30px;
   font-style: normal;
@@ -687,8 +691,6 @@ color: #304266;
   line-height: 50px; /* 166.667% */
 }
 .serviceIntroduction__head-line__image {
-  width: 430px;
-  height: 486px;
   position: absolute;
   right: 11px;
   bottom: 0px;
@@ -725,11 +727,9 @@ color: #304266;
 }
 .serviceIntroduction__items__item__title {
   display: inline-flex;
-  padding: 0px 48px;
   justify-content: center;
   align-items: center;
   gap: 10px;
-  background-color: #fca4a4;
   position: relative;
   z-index: 1;
 }
@@ -738,7 +738,7 @@ color: #304266;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 0;
+  z-index: -1;
 }
 .serviceIntroduction__items__item__title h3 {
   display: block;
@@ -748,6 +748,8 @@ color: #304266;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  padding: 0px 48px;
+  background-color: #fff;
   z-index: 1;
 }
 
@@ -766,28 +768,23 @@ color: #304266;
   width: 1032px;
   justify-content: center;
   align-items: center;
+  position: relative;
   gap: 24px;
 }
 .serviceIntroduction__items__item__box__card {
   display: flex;
-  padding: 24px 32px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   align-self: stretch;
   border-radius: 12px;
   background: #fff;
-  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.15);
 }
-.serviceIntroduction__items__item__box__card img {
-  background-color: #5079b5;
-  height: 392px;
-  width: 420px;
-}
-.serviceIntroduction__head-line__text-box__arrow {
-  height: auto;
-  height: auto;
-  background-color: #304266;
+
+.serviceIntroduction__items__item__box__arrow {
+  z-index: 2;
+  position: absolute;
+  top: 249px;
 }
 
 .serviceIntroduction__items__summary {
@@ -799,7 +796,8 @@ color: #304266;
 }
 .serviceIntroduction__items__summary__container {
   display: flex;
-  width: 1030px;
+  width: 1100px;
+  padding: 0 21px;
   flex-direction: column;
   align-items: center;
   gap: 32px;
@@ -830,6 +828,8 @@ color: #304266;
 }
 .serviceIntroduction__items__summary__container__descriptions p span {
   font-weight: 700;
+    background: linear-gradient(transparent 60%,
+          rgb(197, 225, 235) 60%);
 }
 
 /* ------firstCTABanner----- */
@@ -864,34 +864,42 @@ color: #304266;
 }
 .firstCTABanner__CTA-button {
   position: absolute;
-  bottom: 43px;
-  left: 433px;
+  bottom: 36px;
+  left: 435px;
   display: inline-flex;
-  padding: 24px 40px;
-  align-items: center;
-  gap: 24px;
+    padding: 20px 64px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
   border-radius: 8px;
   background: linear-gradient(270deg, #d91e68 16.42%, #f2635f 126.01%);
 }
 .firstCTABanner__CTA-button__caption p {
-  color: #fff;
-  font-family: "Zen Kaku Gothic Antique";
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 32px; /* 133.333% */
-}
-.firstCTABanner__CTA-button__caption p span {
-  letter-spacing: 7.92px;
+  color: #FFF;
+    font-family: "Zen Kaku Gothic Antique";
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 32px;
+    /* 114.286% */
+    letter-spacing: 2.8px;
 }
 .firstCTABanner__CTA-button__action-word h3 {
-  color: #fff;
-  text-align: center;
-  font-family: "Zen Kaku Gothic Antique";
-  font-size: 36px;
-  font-style: normal;
-  font-weight: 900;
-  line-height: 64px; /* 177.778% */
+  color: #FFF;
+    text-align: center;
+    font-family: "Zen Kaku Gothic Antique";
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 50px;
+    /* 125% */
+    letter-spacing: 8px;
+}
+.firstCTABanner__bubble {
+  position: absolute;
+  top: 227px;
+  left: 938px;
 }
 /* -------serviceDetail------ */
 .serviceDetail {
@@ -998,7 +1006,7 @@ color: #304266;
   font-family: "Zen Kaku Gothic Antique";
   font-size: 24px;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 700;
   line-height: normal;
   letter-spacing: 1.2px;
 }
@@ -1055,6 +1063,11 @@ color: #304266;
   justify-content: center;
 }
 .serviceDetail__reasons__cards__card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
   width: 350px;
   height: 340px;
   flex-shrink: 0;
@@ -1078,6 +1091,9 @@ color: #304266;
   font-weight: 500;
   line-height: normal;
   letter-spacing: 4.8px;
+}
+.serviceDetail__reasons__cards__card__title h4 span {
+  letter-spacing: 0;
 }
 
 .serviceDetail__example {
@@ -1195,7 +1211,6 @@ color: #304266;
 .serviceDetail__example__case__result__review__image {
   width: 200px;
   height: 150px;
-  background-color: #5079b5;
 }
 .serviceDetail__example__case__result__review__user {
   display: flex;
@@ -1269,7 +1284,8 @@ color: #304266;
   width: 621px;
   height: 160px;
 }
-.serviceDetail__example__case__overview:nth-of-type(2) {
+.serviceDetail__example__case:nth-of-type(3) 
+.serviceDetail__example__case__overview {
   display: flex;
   width: 1000px;
   flex-direction: column;
@@ -1283,7 +1299,6 @@ color: #304266;
   position: absolute;
   top: 136px;
   right: 0px;
-  background-color: #5079b2;
 }
 .serviceDetail__example__case__overview:nth-of-type(2) {
   position: relative;
@@ -1393,6 +1408,7 @@ color: #304266;
   font-family: Volkhov;
   font-size: 56px;
   font-style: normal;
+  z-index: 2;
   font-weight: 400;
   line-height: 82px; /* 146.429% */
 }
@@ -1557,15 +1573,19 @@ color: #304266;
   font-weight: 500;
   letter-spacing: 1.4px;
 }
+.plan__container__cards__card__box__text-area:nth-of-type(2)
+ p span {
+    padding: 0 11px 0 22px;
+ }
 .plan__container__cards__card__box__text-area__title__price p span {
   color: #d91e68;
   text-align: center;
   font-family: "Zen Antique Soft";
   font-size: 80px;
   font-weight: 400;
+  padding: 0 10px;
   letter-spacing: 4px;
 }
-/* Zen Antique Softフォントファイルのインストールから再開 */
 .plan__container__cards__card__box__text-area__overview{
   display: flex;
   flex-direction: column;
@@ -1677,7 +1697,7 @@ display: flex;
 }
 .secondCTABanner__bubble {
   position: absolute;
-  top: -137.79px;
+  bottom: 205px;
   left: 514.04px;
 }
 .secondCTABanner__speech {
@@ -1703,10 +1723,10 @@ display: flex;
 }
 .secondCTABanner__CTA-button {
   position: absolute;
-  bottom: 57px;
+  bottom: 50px;
   left: 639px;
   display: inline-flex;
-  padding: 20px 64px;
+  padding: 24px 80px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -1716,7 +1736,7 @@ display: flex;
 }
 .secondCTABanner__CTA-button__caption p {
   color: #FFF;
-    font-family: "Zen Kaku Gothic Antique";
+  font-family: "Zen Kaku Gothic Antique";
     font-size: 28px;
     font-style: normal;
     font-weight: 500;
@@ -1728,7 +1748,7 @@ display: flex;
   color: #FFF;  
     text-align: center;
     font-family: "Zen Kaku Gothic Antique";
-    font-size: 38px;
+    font-size: 40px;
     font-style: normal;
     font-weight: 900;
     line-height: 48px;
@@ -1883,7 +1903,6 @@ color: #304266;
 .free-service__container__head__image img {
   height: 377px;
   width: 251px;
-  background-color: #5079B2;
 }
 .free-service__container__head__text-area__description {
   display: flex;
@@ -1989,6 +2008,7 @@ color: #D91E68;
   font-family: "Zen Antique Soft";
   font-size: 40px;
   font-weight: 400;
+  padding: 0 8px;
   letter-spacing: 2px;
   }
   .free-service__container__CTA__button {
