--- a/normalize.css
+++ b/normalize.css
@@ -1,6 +1,7 @@
 /* A Modern CSS Reset */
 html,
-body {
+body,
+section {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,6 +9,7 @@ body {
 html {
   background-color: #fff;
 }
+
 a {
   color: inherit;
   text-decoration: none;
@@ -20,6 +22,15 @@ margin: 0;
 }
 button {
   border:none;
+}
+.pc {
+  display: block;
+}
+.tab {
+  display: none;
+}
+.sp {
+  display: none;
 }
 *,
 *::before,
@@ -55,7 +66,6 @@ a:not([class]) {
 }
 img,
 picture {
-  max-width: 100%;
   display: block;
 }
 input,
