--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ color: #304266;
   width: 563px;
   height: 513px;
 }
-
+/* 
 .top__container__information {
   position: absolute;
   top: 448px;
@@ -235,11 +235,10 @@ color: #304266;
   font-style: normal;
   font-weight: 400;
   line-height: 54px; /* 207.692% */
-}
 
 /* -------------company-overview---------- */
 .company-overview {
-  width: 1366px;
+  width: 100%;
   height: 100%;
   flex-shrink: 0;
   display: flex;
@@ -247,13 +246,12 @@ color: #304266;
   background-color: #fff;
 }
 .company-overview__container {
-  height: 513px;
-  width: 1100px;
+  width: 100%;
   text-align: center;
   display: flex;
   flex-direction: column;
   gap: 48px;
-  margin: 80px 133px 0 133px;
+  margin: 80px 133px 130px 133px;
 }
 .company-overview__container__title {
   color: #304266;
@@ -315,7 +313,6 @@ color: #304266;
   font-weight: 700;
   letter-spacing: 1.6px;
 }
-
 .company-overview__container__stats__cards__card__text__lower {
   color: #304266;
   display: flex;
@@ -330,7 +327,6 @@ color: #304266;
   line-height: normal;
   letter-spacing: 3.6px;
 }
-
 /* ------------フォントファイルが効かない問題------------} */
 
 
@@ -424,6 +420,7 @@ color: #304266;
   display: flex;
   align-items: flex-start;
   align-content: flex-start;
+  justify-content: center;
   gap: 40px;
   align-self: stretch;
   flex-wrap: wrap;
@@ -477,7 +474,6 @@ color: #304266;
   height: 406px;
   flex-shrink: 0;
   border-radius: 12px;
-  background: #fff;
   margin: 0 auto;
 }
 .issue__impact {
@@ -573,7 +569,7 @@ color: #304266;
 }
 .problemSolving__bg-lower {
   width: 1366px;
-  height: 1207px;
+  height: 1507px;
   position: absolute;
   top: 340px;
   flex-shrink: 0;
@@ -584,8 +580,8 @@ color: #304266;
 /* -------------------------------- */
 .problemSolving__container {
   display: flex;
-  width: 1100px;
-  height: 996px;
+  width: 100%;
+  height: auto;
   flex-direction: column;
   align-items: center;
   gap: 40px;
@@ -687,7 +683,7 @@ color: #304266;
   background-color: #fff;
 }
 .serviceIntroduction__head-line {
-  width: 1366px;
+  width: 100%;
   height: 300px;
   background: #304266;
   position: relative;
@@ -877,8 +873,7 @@ color: #304266;
   background-color: #eaedf2;
 }
 .firstCTABanner__image {
-  width: 515px;
-  height: 573px;
+
   position: absolute;
   bottom: 0px;
 }
@@ -1206,7 +1201,6 @@ color: #304266;
   width: 355px;
   height: 224px;
   flex-shrink: 0;
-  background-color: #5079b2;
 }
 .serviceDetail__example__case__result {
   display: flex;
@@ -1242,16 +1236,20 @@ color: #304266;
 }
 .serviceDetail__example__case__result__review {
   display: flex;
-  align-items: flex-end;
+  justify-content: space-between;
   gap: 115px;
 }
-.serviceDetail__example__case__result__review__image {
+.serviceDetail__example__case__result__review__image img{
   width: 200px;
   height: 150px;
 }
+.serviceDetail__example__case:nth-of-type(3)
+.serviceDetail__example__case__result__review__image img{
+  width: 250px;
+  height: auto;
+}
 .serviceDetail__example__case__result__review__user {
   display: flex;
-  width: 630px;
   flex-direction: column;
   align-items: flex-start;
   gap: 32px;
@@ -1324,18 +1322,20 @@ color: #304266;
 .serviceDetail__example__case:nth-of-type(3) 
 .serviceDetail__example__case__overview {
   display: flex;
-  width: 1000px;
+  width: 100%;
   flex-direction: column;
   align-items: flex-start;
   gap: 16px;
 }
 .serviceDetail__example__case__overview__logo {
-  width: 336.364px;
-  height: 74px;
   flex-shrink: 0;
   position: absolute;
   top: 136px;
   right: 0px;
+}
+.serviceDetail__example__case__overview__logo img {
+  width: 336.364px;
+  height: 74px;
 }
 .serviceDetail__example__case__overview:nth-of-type(2) {
   position: relative;
@@ -2217,8 +2217,6 @@ color: #D91E68;
       letter-spacing: 1.2px;
       text-decoration: none;
   }
-
-
   /* ---------policy--------- */
             .policy {
               font-family: 'Arial', sans-serif;
@@ -2230,44 +2228,36 @@ color: #D91E68;
               margin: 0 auto;
               border: 1px solid #ccc;
             }
-      
             .policy h1 {
               text-align: center;
               font-size: 32px;
               margin-bottom: 70px;
             }
-      
             .policy h2 {
               font-size: 24px;
               margin-top: 70px;
               margin-bottom: 60px;
             }
-      
             .policy p {
               font-size: 16px;
               margin: 60px 0;
             }
-      
             .policy__contact {
               margin-top: 70px;
             }
-      
             .policy__footer {
               text-align: right;
               margin-top: 80px;
             }
-      
             .policy__back-to-top {
               text-align: center;
               margin-top: 70px;
             }
-      
             .policy__back-to-top a {
               color: #000;
               text-decoration: none;
               font-weight: bold;
             }
-      
             .policy__back-to-top a:hover {
               text-decoration: underline;
             }
