--- a/tablet.css
+++ b/tablet.css
@@ -85,6 +85,10 @@
       padding: 8px;
     }
     /* ------------issue---------------- */
+  .issue__container {
+    width: 768px;
+    margin: 0 auto;
+  }
   .issue__container__title h2 {
     font-size: 24px;
   }
@@ -115,6 +119,9 @@
     .issue__container__cards__card__image img{
       width: 302px;
       height: 302px;
+    }
+    .issue__impact__container {
+      width: 768px;
     }
     .issue__impact__container__title h2 {
       font-size: 22px;
@@ -148,6 +155,7 @@
     }
     .problemSolving__bg-lower {
       width: 768px;
+      height: 1296px;
     }
     .problemSolving__container__title h2 {
       font-size: 24px;
@@ -366,4 +374,65 @@
      .serviceDetail__example__case__result__review__image img{
       width: 200px;
     }
+/* ---------------flow--------------- */
+    .flow {
+      width: 768px;
+      height: 1580px;
+    }
+    .flow__container__title-box {
+      gap: 16px;
+    }
+    .flow__container__title-box__title h2 {
+      font-size: 24px;
+      letter-spacing: 2.4px;
+    }
+    .flow__container__title-box__title h2 span{
+      font-size: 36px;
+      letter-spacing: 3.6px;
+    }
+    .flow__container__title-box__description p {
+      font-size: 18px;
+      line-height: 30px;
+    }
+    .flow__container__steps {
+      gap: 24px;
+    }
+    .flow__container__steps__step {
+      width: 704px;
+        height: 230px;
+        flex-shrink: 0;
+    }
+    .flow__container__steps__step__step-count {
+      font-size: 40px;
+      line-height: 60px;
+      top: 30px;
+      left: 29px;
+    }
+    .flow__container__steps__step__title {
+      top: 40px;
+      left: 249px;
+      font-size: 20px;
+      letter-spacing: 1px;
+    }
+    .flow__container__steps__step__image {
+      top: 82px;
+      left: 55px;
+    }
+    .flow__container__steps__step__image img {
+        width: 174px;
+        height: 110px;
+    }
+    .flow__container__steps__step__description {
+      top: 82px;
+      left: 249px;
+      font-size: 16px;
+      width: 430px;
+        height: 111.034px;
+    }
+
+
+
+
+
+
 }
