--- a/style.css
+++ b/style.css
@@ -2021,8 +2021,7 @@ color: #304266;
   line-height: normal;
   letter-spacing: 1.2px;
   }
-  .free-service__container__cards__card__image {
-    background-color: #bcd8ff;
+  .free-service__container__cards__card__image img {
     width: 480px;
       height: 274px;
   }
