--- a/tablet.css
+++ b/tablet.css
@@ -47,6 +47,8 @@
   .top__container__text h3 {
     top: 919px;
     left: 0px;
+    font-weight: 600;
+    line-height: 42px;
     white-space: nowrap;
   }
   .top__container__actor {
@@ -429,10 +431,171 @@
       width: 430px;
         height: 111.034px;
     }
+    /* ------------------------plan---------------- */
+    .plan__container__title h2 {
+      font-size: 24px;
+      letter-spacing: 1.2px;
+    }
+    .plan__container__description__upper h3,
+    .plan__container__description__lower h3 {
+      font-size: 20px;
+      letter-spacing: 0.4px;
+    }
+    .plan__container__description__upper span {
+      font-size: 32px;
+      letter-spacing: 0.64px;
+    }
+    .plan__container__cards {
+      flex-direction: column;
+      gap: 32px;
+    }
+    .plan__container__cards__card___box svg {
+      width: 450px;
+    }
+/* ----------SVGの幅切り替え方法検討 */
+    .plan__container__annotation {
+      font-size: 14px;
+      line-height: 26px;
+    }
+
+    /*-------------secondCTAbanner---------------  */
+    .secondCTABanner {
+      width: 768px;
+      height: 180px;
+    }
+    .secondCTABanner__CTA-button {
+      bottom: 32px;
+      left: 348px;
+      padding: 16px 32px;
+      gap: 8px;
+    }
+    .secondCTABanner__CTA-button__caption p {
+      font-size: 24px;
+      line-height: 24px;
+    }
+    .secondCTABanner__CTA-button__action-word h3 {
+      font-size: 28px;
+      letter-spacing: 5.6px;
+      line-height: 40px;
+    }
+    .secondCTABanner__image img {
+      width: 270px;
+      height: 284px;
+      left: 40px;
+      bottom: 0px;
+    }
+    .secondCTABanner__bubble {
+      bottom: 150px;
+      left: 230px;
+    }
+    .faq__list__title h2 {
+      font: 24px;
+      letter-spacing: 1.2px;
+    }
+    .faq__list {
+      gap: 24px;
+      width: 704px;
+    }
+    .faq__list__item {
+      
+    }
+    .faq__list__item__question {
+      width: 624px;
+    }
+    .faq__list__item__question__box__text h4 {
+      width: 519px;
+      font-size: 18px;
+    }
+
+    /* --------------------free-service-------------------- */
+    .free-service__container {
+      gap: 40px;
+    }
+    .free-service__container__head {
+      gap: 32px;
+    }
+    .free-service__container__head__text-area {
+      width: 464px;
+      gap: 24px;
+    }
+    .free-service__container__head__text-area__title h2 {
+      font-size: 24px;
+      letter-spacing: 1.2px;
+    }
+    .free-service__container__head__text-area__description p {
+      font-size: 16px;
+      line-height: 28px;
+    }
+    .free-service__container__head__image img{
+      width: 169px;
+      height: 254px;
+    }
+    .free-service__container__annotation h3 {
+      font-size: 24px;
+      line-height: 40px;
+    }
+    .free-service__container__annotation h3 span:nth-of-type(1) {
+      font-size: 48px;
+      line-height: 82px;
+    }
+    .free-service__container__cards {
+      width: 750px;
+      gap: 40px 16px;
+    }
+    .free-service__container__cards__card {
+      width: 352px;
+    }
+    .free-service__container__cards__card__title {
+      padding: 8px 24px;
+    }
+    .free-service__container__cards__card__title h4 {
+      font-size: 20px;
+      letter-spacing: 1px;
+    }
+    .free-service__container__cards__card__image img {
+      width: 352px;
+        height: 200px;
+    }
+    .free-service__container__CTA__upper-text h3 {
+      font-size: 24px;
+      letter-spacing: 1.2px;
+    }
+    .free-service__container__CTA__upper-text h3 span {
+      font-size: 32px;
+      letter-spacing: 3.2px;
+    }
+    .free-service__container__CTA__button {
+      padding: 24px 32px;
+      font-size: 32px;
+      letter-spacing: 1.6px;
+    }
+    .contact {
+      width: 768px;
+      height:  1000px;
+    }
+    .contact__container__title {
+      gap: 20px;
+    }
+    .contact__container__title h2 {
+      font-size: 24px;
+    }
+    .contact__container__title__texts p {
+      font-size: 18px;
+    }
+    .contact__container__title__texts p span {
+      font-size: 20px;
+    }
+    .contact__container__form {
+      width: 704px;
+      height: 500px;
+    }
+    
 
 
 
 
 
 
-}
+
+
+} 
