--- a/normalize.css
+++ b/normalize.css
@@ -6,6 +6,9 @@ section {
   justify-content: center;
   align-items: center;
 }
+body {
+  overflow-x: hidden;
+}
 html {
   background-color: #fff;
 }
