--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@
   font-weight: normal;
   font-style: normal;
 }
+/* -----------arrow animation-------------- */
+.rotate {
+  transform: rotate(180deg);
+}
 /* -------------button-animation------------ */
 .CTA-button {
   overflow: hidden;
@@ -501,6 +505,7 @@ color: #304266;
 }
 
 .issue__impact__container__items {
+  max-width: 1366px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -988,7 +993,8 @@ color: #304266;
 
 .serviceDetail__effect__cards {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
+  justify-content: center;
   gap: 24px;
   align-self: stretch;
 }
@@ -998,7 +1004,6 @@ color: #304266;
   justify-content: center;
   align-items: flex-start;
   gap: 10px;
-  align-self: stretch;
   border-radius: 12px;
   background: #eaedf2;
 }
@@ -2159,11 +2164,11 @@ color: #D91E68;
   /* -----------footer----------- */
   .footer {
     display: flex;
-      width: 1366px;
+      width: 100%;
       height: 320px;
-      padding: 58px 470px 58px 466px;
+      justify-content: center;
+      align-items: center;
       flex-direction: column;
-      align-items: flex-start;
       gap: 10px;
       flex-shrink: 0;
       background: #304266;
