--- a/phone.css
+++ b/phone.css
@@ -552,7 +552,7 @@
     }
   
     .flow__bg-lower {
-      height: 2400px;
+      height: 1900px;
     }
   
     .flow__container__title-box {
@@ -654,6 +654,9 @@
       font-size: 40px;
       letter-spacing: 2px;
     }
+    .plan__container__cards__card__box__text-area__title__price p span {
+      font-size: 40px;
+    }
     /* ----------SVGの幅切り替え方法検討 */
     .plan__container__annotation {
       font-size: 14px;
@@ -695,8 +698,12 @@
     }
   
     .secondCTABanner__bubble {
-      bottom: 150px;
-      left: 230px;
+      top: -50px;
+      left: 115px;
+    }
+    .secondCTABanner__bubble img {
+      width: 145px;
+      left: 98px;
     }
     .faq {
       padding: 64px 0;
@@ -746,11 +753,13 @@
     }
   
     .free-service__container__head {
+      position: relative;
       width: 311px;
       gap: 32px;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      margin: 0 auto;
     }
   
     .free-service__container__head__text-area {
@@ -759,16 +768,24 @@
     }
   
     .free-service__container__head__text-area__title h2 {
-      font-size: 18px;
-      letter-spacing: 0.9px;
-      line-height: 30px;
+      font-size: 20px;
+      letter-spacing: 1px;
+      line-height: 32px;
     }
   
     .free-service__container__head__text-area__description p {
       font-size: 14px;
       line-height: 26px;
     }
+    .free-service__container__head__text-area__description > p:first-of-type {
+      width: 190px;
+    }
   
+    .free-service__container__head__image {
+      position: absolute;
+      top: 92px;
+      left: 202px;
+    }
     .free-service__container__head__image img {
       width: 100px;
         height: 152px;
@@ -777,20 +794,24 @@
     .free-service__container__annotation h3 {
       font-size: 18px;
       line-height: 40px;
+      letter-spacing: 0px;
     }
   
     .free-service__container__annotation h3 span:nth-of-type(1) {
       font-size: 32px;
-      line-height: 40px;
+      line-height: 32px;
+      letter-spacing: 0px;
     }
   
     .free-service__container__cards {
-      width: 750px;
-      gap: 40px 16px;
+      width: 320px;
+      gap: 24px;
+      flex-direction: column;
+      margin: 0 auto;
     }
   
     .free-service__container__cards__card {
-      width: 352px;
+      width: 311px;
     }
   
     .free-service__container__cards__card__title {
@@ -798,33 +819,33 @@
     }
   
     .free-service__container__cards__card__title h4 {
-      font-size: 20px;
-      letter-spacing: 1px;
+      font-size: 18px;
+      letter-spacing: 0px;
     }
   
     .free-service__container__cards__card__image img {
-      width: 352px;
-      height: 200px;
+      width: 100%;
+      height: auto;
     }
   
     .free-service__container__CTA__upper-text h3 {
-      font-size: 24px;
+      font-size: 14px;
       letter-spacing: 1.2px;
     }
   
     .free-service__container__CTA__upper-text h3 span {
-      font-size: 32px;
+      font-size: 20px;
       letter-spacing: 3.2px;
     }
   
     .free-service__container__CTA__button {
       padding: 24px 32px;
-      font-size: 32px;
-      letter-spacing: 1.6px;
+      font-size: 16px;
+      letter-spacing: 0.8px;
     }
   
     .contact {
-      width: 768px;
+      width: 375px;
       height: 1000px;
     }
   
@@ -833,23 +854,42 @@
     }
   
     .contact__container__title h2 {
-      font-size: 24px;
-    }
-  
-    .contact__container__title__texts p {
-      font-size: 18px;
-    }
-  
-    .contact__container__title__texts p span {
       font-size: 20px;
     }
   
+    .contact__container__title__texts p {
+      font-size: 16px;
+    }
+  
+    .contact__container__title__texts p span {
+      font-size: 16px;
+    }
+  
     .contact__container__form {
-      width: 704px;
+      width: 343px;
       height: 500px;
     }
   
     .contact__bg-lower {
       height: 800px;
+    }
+    .footer {
+      width: 100%px;
+    }
+    .footer__container {
+      width: 319px;
+      gap: 24px;
+    }
+    .footer__container__logo img {
+      width: 215px;
+        height: 45.73px;
+    }
+    .footer__container__content__policy a {
+      font-size: 12px;
+      letter-spacing: 0px;
+    }
+    .footer__container__copyright p {
+      font-size: 8px;
+      letter-spacing: 0.8px;
     }
 }
