--- a/style.css
+++ b/style.css
@@ -2079,9 +2079,9 @@ color: #D91E68;
   /* --------------contact--------------- */
     .contact {
       width: 1366px;
-      height: 1748px;
+      height: 2000px;
       display: flex;
-      text-align: center;
+      text-align: left;
       justify-content: center;
       align-items: center;
       position: relative;
@@ -2119,6 +2119,7 @@ color: #D91E68;
       top: 102px;
       display: flex;
       width: 1000px;
+      height: 100%;
       flex-direction: column;
       align-items: flex-start;
       gap: 64px;
@@ -2129,7 +2130,6 @@ color: #D91E68;
         flex-direction: column;
         align-items: center;
         gap: 32px;
-        align-self: stretch;
     }
     .contact__container__title h2 {
       color: #304266;
@@ -2158,9 +2158,7 @@ color: #D91E68;
       
   }
   .contact__container__form {
-    height: 1000px;
-    width: 800px;
-    background-color: #8CAFE0;
+    width: 100%;
   }
 
   /* -----------footer----------- */
@@ -2270,3 +2268,79 @@ color: #D91E68;
             .policy__back-to-top a:hover {
               text-decoration: underline;
             }
+
+
+
+
+/* -------------contact-form--------------- */
+.column {
+  display: flex;
+  justify-content: left;
+  align-items: start;
+}
+.essential,
+.any,
+.space {
+  display: flex;
+  width: 64px;
+  height: 35px;
+  padding: 6px 16px;
+  margin-right: 19px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+}
+.inner-text{
+  color: #FFF;
+    font-family: "Zen Kaku Gothic Antique";
+    font-size: 16px;
+    font-weight: 500;
+}
+.essential {
+    background: #d91e68;
+}
+.any {
+    background: #ccc;
+}
+.column label,
+.column .select,
+.column .textarea {
+  width: 312px;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  color: #304266;
+    font-family: "Zen Kaku Gothic Antique";
+    font-size: 24px;
+    font-weight: 500;
+    margin-right: 40px;
+}
+.column input,
+.column select  {
+  width: 480px;
+    height: 35px;
+      stroke-width: 1px;
+      stroke: #304266;
+}
+.column textarea {
+  width: 480px;
+    height: 300px;
+      stroke-width: 1px;
+      stroke: #304266;
+}
+.submit-button {
+  display: flex;
+  width: 915px;
+  padding: 16px 160px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 8px;
+  padding: 16px 160px;
+  border: none;
+}
+.submit-button[value="送信する"] {
+  color: #fff;
+  font-size: 32px;
+  background-color: #8095b2;
+}
