--- a/phone.css
+++ b/phone.css
@@ -36,7 +36,12 @@
       line-height: 38px;   
       letter-spacing: -0.78px;
     }
-  
+    .top__container__cta-button a{
+      display: block;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
     .top__container__cta-button {
       top: 590px;
       left: 35px;
@@ -77,7 +82,6 @@
     .company-overview__container__title h2 {
       font-size: 22px;
         font-style: normal;
-        font-weight: 700;
         line-height: 34px;
     }
     .company-overview__container__stats__cards {
