--- a/tablet.css
+++ b/tablet.css
@@ -1,4 +1,4 @@
-@media (min-width: 768px) and (max-width: 1524px) {
+@media (min-width: 768px) and (max-width: 1388px) {
   .pc {
     display: none;
   } 
@@ -13,16 +13,17 @@
     width: 768px;
     height: 1024px;
     padding: 0 23px 124px 23px;
-    background-image: none;
+
+      background-image: url("./images/sec1/fv_background_tb.jpg");
+            background-repeat: no-repeat;
+              background-position: center center;
+              background-size: cover;
   }
   .top__container {
-      width: 768px;
+      width: 720px;
       height: 900px;
       text-align:center;
-      background-image: url("./images/sec1/fv_background_sp.jpg");
-      background-repeat: no-repeat;
-      background-position: center center;
-      background-size: cover;
+
   }
   .top__container__logo {
     top: 53px;
@@ -39,6 +40,12 @@
       line-height: 64px;
       letter-spacing: 1.32px;
   }
+  .top__container__cta-button a {
+      display: block;
+      display: flex;
+      flex-direction: column;
+     gap: 12px;
+  }
   .top__container__cta-button {
     top: 739px;
     left: 111px;
@@ -50,6 +57,7 @@
   .top__container__text h3 {
     top: 919px;
     left: 0px;
+    letter-spacing: 1.5px;
     font-weight: 600;
     line-height: 42px;
     white-space: nowrap;
@@ -432,7 +440,7 @@
       gap: 16px;
     }
     .flow__container__title-box__title h2  {
-      font-size: 2px;
+      font-size: 20px;
       letter-spacing: 0px;
     }
     .flow__container__title-box__title h2 span{
