--- a/style.css
+++ b/style.css
@@ -1353,6 +1353,7 @@ color: #304266;
   width: 1000px;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: center;
   gap: 40px;
   z-index: 1;
 }
@@ -1556,7 +1557,7 @@ color: #304266;
   width: 302px;
   flex-direction: column;
   align-items: center;
-  gap: 16px;
+  gap: 32px;
   z-index: 1;
 }
 .plan__container__cards__card__box__text-area__title {
@@ -1579,17 +1580,15 @@ color: #304266;
   font-size: 28px;
   font-style: normal;
   font-weight: 500;
+  line-height: 32px;
   letter-spacing: 1.4px;
 }
-.plan__container__cards__card__box__text-area:nth-of-type(2)
- p span {
-    padding: 0 11px 0 22px;
- }
 .plan__container__cards__card__box__text-area__title__price p span {
   color: #d91e68;
   text-align: center;
   font-family: "Zen Antique Soft";
   font-size: 80px;
+  line-height: 32px;
   font-weight: 400;
   padding: 0 10px;
   letter-spacing: 4px;
@@ -1624,7 +1623,6 @@ display: flex;
     font-style: normal;
     font-weight: 500;
     line-height: 32px;
-    letter-spacing: -0.48px;
     text-align: left;
 }
 
@@ -2026,93 +2024,95 @@ color: #D91E68;
 
   /* --------------contact--------------- */
     .contact {
-      width: 1366px;
-      height: 2000px;
-      display: flex;
-      text-align: left;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-      background-color: #fff;
-      z-index: -1;
-    }
-  
-    .contact__bg-upper {
-      height: 668px;
-      width: 1932px;
-      border-radius: 50%;
-      display: flex;
-      justify-content: center;
-      background: #eaedf2;
-      position: absolute;
-      top: 0;
-      overflow: hidden;
-      z-index: 0;
-      clip-path: inset(0 283px 0 283px);
-      flex-shrink: 0;
-    }
-  
-    .contact__bg-lower {
-      width: 1366px;
-      height: 1498px;
-      position: absolute;
-      top: 340px;
-      flex-shrink: 0;
-      background: #eaedf2;
-      z-index: 0;
-    }
-  
-    .contact__container {
-      position: absolute;
-      top: 102px;
-      display: flex;
-      width: 1000px;
-      height: 100%;
-      flex-direction: column;
-      align-items: flex-start;
-      gap: 64px;
-      z-index: 1;
-    }
-    .contact__container__title {
-      display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 32px;
-    }
-    .contact__container__title h2 {
-      color: #304266;
-        text-align: center;
-        font-family: "Zen Kaku Gothic Antique";
-        font-size: 40px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: normal;
-    }
-  .contact__container__title__texts p{
-    color: #304266;
-      text-align: center;
-      font-family: "Zen Kaku Gothic Antique";
-      font-size: 32px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: normal;
-  }
-  .contact__container__title__texts p span{
-    color: #304266;
-    padding-top: 8px;
-      font-weight: 900;
-        background: linear-gradient(transparent 60%,
-              rgb(252, 204, 233) 60%);
-      
-  }
-  .contact__container__form {
-    width: 100%;
-  }
+  width: 1366px;
+  height: 2000px;
+  display: flex;
+  text-align: left;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  background-color: #fff;
+  z-index: 1; /* ここを修正 */
+}
 
+.contact__bg-upper {
+  height: 668px;
+  width: 1932px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  background: #eaedf2;
+  position: absolute;
+  top: 0;
+  overflow: hidden;
+  z-index: 0;
+  clip-path: inset(0 283px 0 283px);
+  flex-shrink: 0;
+}
+
+.contact__bg-lower {
+  width: 1366px;
+  height: 1498px;
+  position: absolute;
+  top: 340px;
+  flex-shrink: 0;
+  background: #eaedf2;
+  z-index: 0;
+}
+
+.contact__container {
+  position: absolute;
+  top: 102px;
+  display: flex;
+  width: 1000px;
+  height: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 64px;
+  z-index: 2; /* ここを修正 */
+}
+
+.contact__container__title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+
+.contact__container__title h2 {
+  color: #304266;
+  text-align: center;
+  font-family: "Zen Kaku Gothic Antique";
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.contact__container__title__texts p {
+  color: #304266;
+  text-align: center;
+  font-family: "Zen Kaku Gothic Antique";
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.contact__container__title__texts p span {
+  color: #304266;
+  padding-top: 8px;
+  font-weight: 900;
+  background: linear-gradient(transparent 60%, rgb(252, 204, 233) 60%);
+}
+
+.contact__container__form {
+  width: 100%;
+}
   /* -----------footer----------- */
   .footer {
     display: flex;
-      width: 100%;
+      width: 1366px;
       height: 320px;
       justify-content: center;
       align-items: center;
