--- a/style.css
+++ b/style.css
@@ -850,7 +850,6 @@ color: #304266;
   background-color: #eaedf2;
 }
 .firstCTABanner__image {
-
   position: absolute;
   bottom: 0px;
 }
@@ -883,6 +882,12 @@ color: #304266;
     gap: 12px;
   border-radius: 8px;
   background: linear-gradient(270deg, #d91e68 16.42%, #f2635f 126.01%);
+}
+.firstCTABanner__CTA-button a {
+  display: block;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
 .firstCTABanner__CTA-button__caption p {
   color: #FFF;
@@ -1470,8 +1475,9 @@ color: #304266;
 }
 .plan__container {
   display: flex;
-  width: 100%;
+  width: 1366px;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   gap: 40px;
 }
@@ -1524,7 +1530,6 @@ color: #304266;
   align-items: center;
   gap: 24px;
   padding: 0;
-  align-self: stretch;
 }
 .plan__container__cards__card {
   display: flex;
@@ -1564,7 +1569,7 @@ color: #304266;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2px;
+  gap: 24px;
 }
 .plan__container__cards__card__box__text-area__title_plan-name h4 {
   color: #304266;
@@ -1677,10 +1682,10 @@ display: flex;
 }
 .plan__container__annotation {
   color: #304266;
-  
     font-family: "Zen Kaku Gothic Antique";
     font-size: 20px;
     font-style: normal;
+    width: 80%;
     font-weight: 400;
     line-height: 32px;
     letter-spacing: 1px;
@@ -1737,6 +1742,12 @@ display: flex;
   gap: 12px;
   border-radius: 8px;
   background: linear-gradient(270deg, #D91E68 16.42%, #F2635F 126.01%);
+}
+.secondCTABanner__CTA-button a {
+  display: block;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
 .secondCTABanner__CTA-button__caption p {
   color: #FFF;
@@ -1797,15 +1808,15 @@ display: flex;
     border-radius: 12px;
   background: #EAEDF2;
 }
-.faq__list__item.open {
-  gap: 24px;
-}
 .faq__list__item__question {
   display: flex;
     width: 920px;
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
+}
+.faq__list__item__question.open {
+  margin-bottom: 40px;
 }
 
 .faq__list__item__question__box {
@@ -1833,7 +1844,7 @@ display: flex;
     gap: 40px;
     max-height: 0;
     overflow: hidden;
-    transition: max-height 0.3s ease;
+    transition: max-height margin-botom 0.3s ease;
 }
 .faq__list__item__answer.open {
   max-height: 200px;
